--- a/app/public/index.html
+++ b/app/public/index.html
@@ -5,8 +5,8 @@
 
     <!--<link rel="stylesheet" type="text/css" href="/app/public/css/custom.css"/>
     <script src="/app/public/js/jquery-3.5.1.min.js"></script>
-    <script src="/app/public/js/bootstrap.min.js"></script>
-    <script src="/app/public/js/custom.js"></script>-->
+    <script src="/app/public/js/bootstrap.min.js"></script>-->
+    <script src="/app/public/js/custom.js"></script>
 </head>
 <body>
 
