--- a/app/public/welcome.html
+++ b/app/public/welcome.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="/app/public/js/index.js"></script>
-    <link rel="stylesheet" href="/app/public/css/index.css">
+    <script src="/app/public/js/welcome.js"></script>
 </head>
 <body>
+
+    <h1>__MSG_welcome_description__</h1>
     <b>__MSG_popup_description__</b>
 
     <script src="/app/public/js/i18n.js"></script>
