Now supports Edge

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -130,12 +130,17 @@
         <i id="appVersion"></i>
         <br />
         <a href="#" id="donate">__MSG_app_donate__</a>
-        -
-        <a href="#" id="chromeStore">__MSG_chrome_store__</a>
-        -
+        •
         <a href="#" id="github">__MSG_github__</a>
+        •
+        <a href="#" id="chromeStore">__MSG_chrome_store__</a>
+        •
+        <a href="#" id="mozillaAddons">__MSG_mozilla_addons__</a>
+        •
+        <a href="#" id="edgeAddons">__MSG_edge_addons__</a>
+
         <!--<button id="donate">__MSG_app_donate__</button>
-        -->
+    -->
     </div>
 
 
