Chatbox blurring fixed and v1.6 is ready

--- a/source/app/public/index.html
+++ b/source/app/public/index.html
@@ -8,6 +8,7 @@
 
     <div class="logo">
         <img src="/app/public/logo.png" />
+        <button id="donate">__MSG_app_donate__</button>
         <button id="popout">__MSG_app_popout__</button>
         <h1>
             __MSG_app_title__
@@ -96,7 +97,7 @@
                 <input type="checkbox" id="chatBoxMessageBox">
                 <span class="slider round"></span>
             </label>
-            <input type="range" value="0" min="0" max="15" class="range" id="chatBoxMessageBoxBlurPx">
+            <input type="range" value="0" min="0" max="30" class="range" id="chatBoxMessageBoxBlurPx">
         </div>
 
         <div class="line">
@@ -129,18 +130,14 @@
         <b id="appName">__MSG_app_title__ - </b>
         <i id="appVersion"></i>
         <br />
-        <a href="#" id="donate">__MSG_app_donate__</a>
-        •
-        <a href="#" id="github">__MSG_github__</a>
-        •
         <a href="#" id="chromeStore">__MSG_chrome_store__</a>
         •
         <a href="#" id="mozillaAddons">__MSG_mozilla_addons__</a>
         •
         <a href="#" id="edgeAddons">__MSG_edge_addons__</a>
+        •
+        <a href="#" id="operaAddons">__MSG_opera_addons__</a>
 
-        <!--<button id="donate">__MSG_app_donate__</button>
-    -->
     </div>
 
 
